# eivankin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli_app.py  cli_entrypoint.sh  docker-compose.yml  load_testing.py  load_testing_entrypoint.sh  pyproject.toml
data/: sanity_check_in.csv
model/: domain.py  manager.py
models/: ridge_pipeline_balcony.pkl  ridge_pipeline_bathroom.pkl  ridge_pipeline_bedding.pkl  ridge_pipeline_capacity.pkl  ridge_pipeline_class.pkl  ridge_pipeline_club.pkl  ridge_pipeline_quality.pkl  ridge_pipeline_view.pkl  svc_pipeline_balcony.pkl  svc_pipeline_bathroom.pkl  svc_pipeline_bedding.pkl  svc_pipeline_capacity.pkl  svc_pipeline_class.pkl  svc_pipeline_club.pkl  svc_pipeline_quality.pkl  svc_pipeline_view.pkl
notebooks/: 02_data_preparation.ipynb  03_preprocessing_and_training.ipynb  04_evaluation.ipynb
preprocessed_data/few_shot/: few_shot_for_camping.csv  few_shot_for_kremlin_dubai_marina_view.csv  few_shot_for_platinum.csv  few_shot_for_sextuple_or_quintuple.csv
web_app/: main.py
