[tool.poetry]
name = "tariff-classification"
version = "0.1.0"
description = ""
authors = ["Evgenij Ivankin <e.ivankin@innopolis.university>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
