[tool.poetry]
name = "tariff-classification"
version = "0.1.0"
description = ""
authors = ["Evgenij Ivankin <e.ivankin@innopolis.university>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
typer = "^0.12.5"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
pre-commit = "^3.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
jupyter = "^1.1.1"
ydata-profiling = "^4.10.0"
tabulate = "^0.9.0"
locust = "^2.31.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
